--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">About Me</a>
+                <a class="nav-link active" aria-current="page" href="#">About Me</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./projects.html">Projects</a>
@@ -31,10 +31,9 @@
         </div>
         </nav>
         
-        <div class = 'text-box' id = 'about-me'>
-            <h1>About Me</h1>
-            <h1>My Journey</h1>
-            <h1>Why should you consider me?</h1>
+        <div class = 'text-box' id = 'programming-projects'>
+            <h1>Programming Projects</h1>
+            <h1>Graphic Design Projects</h1>
         </div>
     </body>
 </html>
