deciding on a color palette

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
         <link href = "../CSS/index.css" rel = "stylesheet">
         <!--Local JS-->
         <script src = "../JS/index.js" async></script>
-        <title>Quinn McClure</title>
+        <title>FrameShift Dev</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id = "navbar">
